force-app/main/default/objects/Account/fields/Account_Domain__c.field-meta.xml
<CustomField>
    <fullName>Account_Domain__c</fullName>
    <formula>IF(FIND(&apos;/&apos;,SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Website, &apos;http://&apos;, NULL), &apos;https://&apos;, NULL), &apos;www.&apos;, NULL))&gt;0,LEFT(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Website, &apos;http://&apos;, NULL), &apos;https://&apos;, NULL), &apos;www.&apos;, NULL),FIND(&apos;/&apos;,SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Website, &apos;http://&apos;, NULL), &apos;https://&apos;, NULL), &apos;www.&apos;, NULL))-1),SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Website, &apos;http://&apos;, NULL), &apos;https://&apos;, NULL), &apos;www.&apos;, NULL))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Domain</label>
    <type>Text</type>
</CustomField>