force-app/main/default/objects/Account/fields/Account_LinkedIn_URL__c.field-meta.xml
<CustomField>
    <fullName>Account_LinkedIn_URL__c</fullName>
    <label>Account LinkedIn URL</label>
    <type>Url</type>
</CustomField>