force-app/main/default/objects/Account/fields/Account_Merged__c.field-meta.xml
<CustomField>
    <fullName>Account_Merged__c</fullName>
    <formula>IF(
    Merged_Accounts__c &gt; 0,
    true,
    false
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Merged?</label>
    <type>Checkbox</type>
</CustomField>