force-app/main/default/objects/Account/fields/Account_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Formula__c</fullName>
    <description>This field is used on Report</description>
    <formula>IF(ParentId == &apos;&apos; , HYPERLINK(&quot;/&quot; &amp;Id, Name), HYPERLINK(&quot;/&quot; &amp;ParentId   , Parent.Name ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>