force-app/main/default/objects/Account/fields/Account_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Account_Payment_Terms__c</fullName>
    <label>Account Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Terms</valueSetName>
    </valueSet>
</CustomField>