force-app/main/default/objects/Account/fields/AccountOwnerSugarID__c.field-meta.xml
<CustomField>
    <fullName>AccountOwnerSugarID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Owner Sugar ID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>