force-app/main/default/objects/Account/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Created for DocuSign to show Account Address in Single Line.</description>
    <formula>IF(NOT(ISBLANK(BillingStreet)),BillingStreet +&apos;, &apos;,&apos;&apos;)&amp;
IF(NOT(ISBLANK(BillingCity)),BillingCity+&apos;, &apos;,&apos;&apos;)&amp;
IF(NOT(ISBLANK(BillingPostalCode)),BillingPostalCode+&apos;, &apos;,&apos;&apos;)&amp;
IF(NOT(ISBLANK(BillingCountry)),BillingCountry,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>