force-app/main/default/objects/Account/fields/Certified_K8s__c.field-meta.xml
<CustomField>
    <fullName>Certified_K8s__c</fullName>
    <description>Access to this field is granted by the &quot;CNCF fields&quot; permission set.</description>
    <inlineHelpText>Is the Account Certified Kubernetes?</inlineHelpText>
    <label>Certified K8s</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Certified Kubernetes</fullName>
                <default>true</default>
                <label>Not Certified Kubernetes</label>
            </value>
            <value>
                <fullName>Certified Kubernetes</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>