force-app/main/default/objects/Account/fields/CNCF_date__c.field-meta.xml
<CustomField>
    <fullName>CNCF_date__c</fullName>
    <label>CNCF Downgrade/Upgrade Date</label>
    <type>Date</type>
</CustomField>