force-app/main/default/objects/Account/fields/CNCF_Downgrade_upgrade__c.field-meta.xml
<CustomField>
    <fullName>CNCF_Downgrade_upgrade__c</fullName>
    <label>CNCF  Downgrade/Upgrade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>