force-app/main/default/objects/Account/fields/Company_Domains__c.field-meta.xml
<CustomField>
    <fullName>Company_Domains__c</fullName>
    <inlineHelpText>Please enter domain separated by comma</inlineHelpText>
    <label>Company Domains</label>
    <length>255</length>
    <type>Text</type>
</CustomField>