force-app/main/default/objects/Account/fields/Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Type__c</fullName>
    <label>Company Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>education</fullName>
            </value>
            <value>
                <fullName>government</fullName>
            </value>
            <value>
                <fullName>nonprofit</fullName>
            </value>
            <value>
                <fullName>personal</fullName>
            </value>
            <value>
                <fullName>private</fullName>
            </value>
            <value>
                <fullName>public</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>