force-app/main/default/objects/Account/fields/count_of_Account_Project__c.field-meta.xml
<CustomField>
    <fullName>count_of_Account_Project__c</fullName>
    <label>Number of Netsuite Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>