force-app/main/default/objects/Account/fields/Crunchbase_Handle__c.field-meta.xml
<CustomField>
    <fullName>Crunchbase_Handle__c</fullName>
    <description>Crunchbase URL is automatically populated from this field (via workflow) when the value of this field changes.  The purpose of this field is to map to Clearbit, since we&apos;re only able to get the Handle (not the full URL) from Clearbit.</description>
    <inlineHelpText>e.g. organization/linux-foundation</inlineHelpText>
    <label>Crunchbase Handle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>