force-app/main/default/objects/Account/fields/CrunchBase_URL__c.field-meta.xml
<CustomField>
    <fullName>CrunchBase_URL__c</fullName>
    <label>Crunchbase URL</label>
    <type>Url</type>
</CustomField>