force-app/main/default/objects/Account/fields/Current_Year_Individual_Training_Spend__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Individual_Training_Spend__c</fullName>
    <label>Individual Training Spend - YTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>