force-app/main/default/objects/Account/fields/Current_Year_Spend__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Spend__c</fullName>
    <description>This field will store Current Year Spend Amount which will calculated from Purchase History Record from Opportunity.</description>
    <label>Current Year Spend</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>