force-app/main/default/objects/Account/fields/Date_When_Account_Became_Customer__c.field-meta.xml
<CustomField>
    <fullName>Date_When_Account_Became_Customer__c</fullName>
    <label>Date when Account became Customer</label>
    <type>Date</type>
</CustomField>