force-app/main/default/objects/Account/fields/days_since_last_contacted__c.field-meta.xml
<CustomField>
    <fullName>days_since_last_contacted__c</fullName>
    <formula>TODAY()- LastActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>days since last contacted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>