force-app/main/default/objects/Account/fields/DB_Account_Tier__c.field-meta.xml
<CustomField>
    <fullName>DB_Account_Tier__c</fullName>
    <description>used for demandbase integration</description>
    <label>DB Account Tier</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>