force-app/main/default/objects/Account/fields/Docusign__c.field-meta.xml
<CustomField>
    <fullName>Docusign__c</fullName>
    <label>Docusign</label>
    <length>50</length>
    <type>Text</type>
</CustomField>