force-app/main/default/objects/Account/fields/Domain_Alias__c.field-meta.xml
<CustomField>
    <fullName>Domain_Alias__c</fullName>
    <label>Domain Alias</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>