force-app/main/default/objects/Account/fields/DUNS_c__c.field-meta.xml
<CustomField>
    <fullName>DUNS_c__c</fullName>
    <label>DUNS Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>