force-app/main/default/objects/Account/fields/Email_Test__c.field-meta.xml
<CustomField>
    <fullName>Email_Test__c</fullName>
    <label>Email Test</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>