force-app/main/default/objects/Account/fields/engagio__Competitive_Intent_Keywords__c.field-meta.xml
<CustomField>
    <fullName>engagio__Competitive_Intent_Keywords__c</fullName>
    <label>Competitive Intent Keywords - legacy</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>/</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>