force-app/main/default/objects/Account/fields/engagio__MQADate__c.field-meta.xml
<CustomField>
    <fullName>engagio__MQADate__c</fullName>
    <description>MQA date</description>
    <label>MQA Date</label>
    <type>DateTime</type>
</CustomField>