force-app/main/default/objects/Account/fields/engagio__pipeline_predict_score__c.field-meta.xml
<CustomField>
    <fullName>engagio__pipeline_predict_score__c</fullName>
    <label>Pipeline Predict Score</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>