force-app/main/default/objects/Account/fields/engagio__Sales_Touches_14_days__c.field-meta.xml
<CustomField>
    <fullName>engagio__Sales_Touches_14_days__c</fullName>
    <label>Sales Touches (14 days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>