force-app/main/default/objects/Account/fields/Event_PO_required__c.field-meta.xml
<CustomField>
    <fullName>Event_PO_required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked , When Sponsorship opportuntiy is created. THis will mark the Opporutnity as PO required.</inlineHelpText>
    <label>Event PO required</label>
    <type>Checkbox</type>
</CustomField>