force-app/main/default/objects/Account/fields/Global2000Rank__c.field-meta.xml
<CustomField>
    <fullName>Global2000Rank__c</fullName>
    <label>Global 2000 Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>