force-app/main/default/objects/Account/fields/HL_Last_Check_In__c.field-meta.xml
<CustomField>
    <fullName>HL_Last_Check_In__c</fullName>
    <description>Access to this field is granted by the &quot;Hyperledger fields&quot; permission set.</description>
    <label>HL Last Check-In</label>
    <type>Date</type>
</CustomField>