force-app/main/default/objects/Account/fields/HL_Member_Notes_del__c.field-meta.xml
<CustomField>
    <fullName>HL_Member_Notes_del__c</fullName>
    <description>Link to Hyperledger Member Notes.  Access to this field is granted by the &quot;Hyperledger fields&quot; permission set.</description>
    <inlineHelpText>Hyperledger Member Notes - Link to google docs</inlineHelpText>
    <label>HL Member Notes</label>
    <type>Url</type>
</CustomField>