force-app/main/default/objects/Account/fields/ICP__c.field-meta.xml
<CustomField>
    <fullName>ICP__c</fullName>
    <description>Target accounts must match one of these 3 ICP criteria:
1.	LXF Top 100 Strategic Account
2.	Company listed on the Fortune 200 list
3.	Average annual revenue w/ LF for account is 300k+</description>
    <label>ICP Designation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>Non-Strategic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>