force-app/main/default/objects/Account/fields/Id_Sugar__c.field-meta.xml
<CustomField>
    <fullName>Id_Sugar__c</fullName>
    <label>Id_Sugar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>