force-app/main/default/objects/Account/fields/Initial_LF_Membership_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_LF_Membership_Date__c</fullName>
    <label>Initial LF Membership Date</label>
    <type>Date</type>
</CustomField>