force-app/main/default/objects/Account/fields/IsDocusign__c.field-meta.xml
<CustomField>
    <fullName>IsDocusign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDocusign</label>
    <type>Checkbox</type>
</CustomField>