force-app/main/default/objects/Account/fields/IsMember__c.field-meta.xml
<CustomField>
    <fullName>IsMember__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Member</label>
    <type>Checkbox</type>
</CustomField>