force-app/main/default/objects/Account/fields/Job_Category__c.field-meta.xml
<CustomField>
    <fullName>Job_Category__c</fullName>
    <label>Job Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>