force-app/main/default/objects/Account/fields/JoinNow_Company_Type__c.field-meta.xml
<CustomField>
    <fullName>JoinNow_Company_Type__c</fullName>
    <description>Date JoinNow Company Type validated</description>
    <label>JoinNow Company Type (Date)</label>
    <type>Date</type>
</CustomField>