force-app/main/default/objects/Account/fields/K8s_Certified_Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>K8s_Certified_Service_Provider__c</fullName>
    <description>K8s Certified Service Provider.  Access to this field is granted by the &quot;CNCF fields&quot; permission set.</description>
    <inlineHelpText>What is the status of being a Certified Partner for Kubernetes</inlineHelpText>
    <label>K8s Certified Service Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not yet a KCSP</fullName>
                <default>true</default>
                <label>Not yet a KCSP</label>
            </value>
            <value>
                <fullName>KCSP</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>