force-app/main/default/objects/Account/fields/K8s_Training_Partner__c.field-meta.xml
<CustomField>
    <fullName>K8s_Training_Partner__c</fullName>
    <description>Access to this field is granted by the &quot;CNCF fields&quot; permission set.</description>
    <inlineHelpText>Is the Account a K8s Training Partner?</inlineHelpText>
    <label>K8s Training Partner</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not yet a KTP</fullName>
                <default>true</default>
                <label>Not yet a KTP</label>
            </value>
            <value>
                <fullName>KTP</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>