force-app/main/default/objects/Account/fields/KCSP__c.field-meta.xml
<CustomField>
    <fullName>KCSP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Access to this field is granted by the &quot;CNCF fields&quot; permission set.</description>
    <label>KCSP</label>
    <type>Checkbox</type>
</CustomField>