force-app/main/default/objects/Account/fields/KTP__c.field-meta.xml
<CustomField>
    <fullName>KTP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Access to this field is granted by the &quot;CNCF fields&quot; permission set.</description>
    <label>KTP</label>
    <type>Checkbox</type>
</CustomField>