force-app/main/default/objects/Account/fields/Last_Employee_Size_Verified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Employee_Size_Verified_Date__c</fullName>
    <description>Date that JoinNow Number of Employees was validated</description>
    <label>JoinNow Number of Employees (Date)</label>
    <type>Date</type>
</CustomField>