force-app/main/default/objects/Account/fields/LastPurchaseDate__c.field-meta.xml
<CustomField>
    <fullName>LastPurchaseDate__c</fullName>
    <description>This field will store the Date when recent asset got created.</description>
    <label>Last Purchase Date</label>
    <type>Date</type>
</CustomField>