force-app/main/default/objects/Account/fields/LF_Membership_End_Date__c.field-meta.xml
<CustomField>
    <fullName>LF_Membership_End_Date__c</fullName>
    <label>LF Membership End Date</label>
    <type>Date</type>
</CustomField>