force-app/main/default/objects/Account/fields/LF_Membership_Only__c.field-meta.xml
<CustomField>
    <fullName>LF_Membership_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To determine Accounts that are only an active member of the Linux Foundation. Includes Active and Purchased status of membership asset.</description>
    <inlineHelpText>Active member of Linux Foundation only. No other active project memberships.</inlineHelpText>
    <label>LF Membership Only</label>
    <type>Checkbox</type>
</CustomField>