force-app/main/default/objects/Account/fields/LF_Membership_Status__c.field-meta.xml
<CustomField>
    <fullName>LF_Membership_Status__c</fullName>
    <label>LF Membership Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>