force-app/main/default/objects/Account/fields/Merged_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Merged_Accounts__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Counts the number of Accounts merged into this Account in the last 18 months.  Note: If two Accounts were merged into this Account at one time, those two Accounts will (unfortunately) only be counted as one merged Account here, since Salesforce only creates one Account History record for that merge event.  This field is updated weekly; see Scheduled Jobs in Setup for details.</description>
    <inlineHelpText>Counts the number of Accounts merged into this Account in the last 18 months.  This field is updated weekly.</inlineHelpText>
    <label># Merged Accounts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>