force-app/main/default/objects/Account/fields/No_Of_Employess__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Employess__c</fullName>
    <label>JoinNow No Of Employees</label>
    <length>255</length>
    <type>Text</type>
</CustomField>