force-app/main/default/objects/Account/fields/P_O_Required__c.field-meta.xml
<CustomField>
    <fullName>P_O_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This account requires purchase order numbers for invoices.</inlineHelpText>
    <label>P.O. Required</label>
    <type>Checkbox</type>
</CustomField>