force-app/main/default/objects/Account/fields/Partner_Program__c.field-meta.xml
<CustomField>
    <fullName>Partner_Program__c</fullName>
    <description>Access to this field is granted through the &quot;Hyperledger Fields&quot; and &quot;CNCF Fields&quot; permission sets.</description>
    <label>Partner Program</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Authorized training partner</fullName>
            </value>
            <value>
                <fullName>Hyperledger training partner</fullName>
            </value>
            <value>
                <fullName>Hyperledger Certified Service Provider</fullName>
            </value>
            <value>
                <fullName>Hyperledger Certified Service Provider - Candidate</fullName>
            </value>
            <value>
                <fullName>Hyperledger Training Partner- Candidate</fullName>
            </value>
            <value>
                <fullName>Hyperledger Vendor</fullName>
            </value>
            <value>
                <fullName>Hyperledger Speaker Bureau</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>