force-app/main/default/objects/Account/fields/POC__c.field-meta.xml
<CustomField>
    <fullName>POC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Point of contact for Hyperledger Projects.  Access to this field is granted by the &quot;Hyperledger fields&quot; permission set.</description>
    <label>HL-POC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>