force-app/main/default/objects/Account/fields/Previous_Year_Individual_Training_Spend__c.field-meta.xml
<CustomField>
    <fullName>Previous_Year_Individual_Training_Spend__c</fullName>
    <label>Individual Training Spend - Last Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>